2008-10-01   D. V. Wiebe <getdata@ketiltrout.net>  svn:110
	* src/internal.h: Moved config.h inclusion to internal.h

	* src/open.c: Added "." to the list of prohibited field code characcters.

	* src/getdata.h.in, src/internal.h: Hide dirfile implementation from the
	public.
	* src/errors.c: Added get_error() and dirfile_user_error()

	* src/getdata.c src/internal.h src/nframes.c src/open.c src/putdata.c
	src/raw.c: Added encoding framework.

	* src/getdata.c src/slim.c: Add slimlib encoding.

	* src/ascii.c src/getdata.c: Add ASCII encoding.

2008-09-28   D. V. Wiebe <getdata@ketiltrout.net>  svn:109
	* bindings/cxx/dirfile.cpp bindings/cxx/dirfile.h bindings/cxx/entry.cpp
	bindings/cxx/entry.h test/Makefile.am test/addentry.cpp: Add C++ support
	for dirfile_add(), dirfile_flush_metadata(), get_format_filename(), and
	get_nformats().

	* bindings/f77/fgetdata.c bindings/f77/fgetdata.h bindings/f77/getdata.f.in
	bindings/f77/getdata.f90.in bindings/f77/make_parameters.c: Add F77 and F95
	bindings for dirfile_add(), dirfile_flush_metadata(), get_format_filename(),
	and get_nformats().

	* src/add.c (dirfile_add_raw): swap spf and data_type to correspond to the
	ordering in the format file.

2008-09-28   D. V. Wiebe <getdata@ketiltrout.net>  svn:108
	* man/dirfile_add.3 man/dirfile_add_raw.3: Added.
	* man/Makefile.am: Install all the mans previously forgotten about.  Also,
	link to aliases.

	* src/add.c (dirfile_add_lincom): Don't use a variadic function, since in
	obfuscates data typing.

	* src/add.c (dirfile_add): Add suberror codes for GD_E_BAD_ENTRY.
	Initialise internal data.  Initialise the first RAW field, if necessary.

	* src/close.c src/flush.c src/open.c: Distinguish between "canonical"
	format file names (ie.  the full path used to open the file) and
	"external" names (ie. the relative path written to the parent format file).

	* src/errors.c: Add strings for dirfile_add().

	* src/getdata.h.in: Move FILENAME_MAX stuff into internal.h since it doesn't