@@ -1,3 +1,11 @@
+2008-10-01   D. V. Wiebe <getdata@ketiltrout.net>  svn:111
+	* src/entry.c: Properly initialise the private data in the gd_entry_t
+	object returned.
+
+	* bindings/cxx/test/putdata.cpp: Fix constructor call.
+
+	* bindings/f77/make_parameters.c: Add encoding framework parameters.
+
 2008-10-01   D. V. Wiebe <getdata@ketiltrout.net>  svn:110
 	* src/internal.h: Moved config.h inclusion to internal.h
 
